// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`skipWhen Should pass result draft to the functional condition 1`] = `
{
  "errorCount": 0,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 0,
  "tests": {},
  "valid": false,
  "warnCount": 0,
}
`;

exports[`skipWhen Should pass result draft to the functional condition 2`] = `
{
  "errorCount": 1,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "f1": {
      "errorCount": 1,
      "errors": [
        "msg",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
}
`;

exports[`skipWhen Should pass result draft to the functional condition 3`] = `
{
  "errorCount": 2,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "f1": {
      "errorCount": 1,
      "errors": [
        "msg",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 1,
      "errors": [
        "msg",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
}
`;
